Horizontal scroll and bug fixes

--- a/src/components/Dashboard/Schedule/index.scss
+++ b/src/components/Dashboard/Schedule/index.scss
@@ -7,5 +7,5 @@
 
   position: relative;
 
-  overflow: hidden;
+  // overflow: hidden;
 }
