--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -14,8 +14,28 @@ input {
   font-family: 'Source Sans Pro', sans-serif;
 }
 
+body {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+
+  overflow-y: scroll;
+}
+
+body::-webkit-scrollbar {
+  display: none;
+}
+
 html,
 body,
 #root {
+  height: 100%;
+}
+
+#root {
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  width: 100%;
   height: 100%;
 }
